--- a/03.projetos/TelaDeLogin/style.css
+++ b/03.projetos/TelaDeLogin/style.css
@@ -5,4 +5,84 @@
     padding: 0;
     border: border-box;
     font-family: "Elms Sans", sans-serif;
+    color: rgb(203, 203, 203);
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    /*background-image: url(./img/maquina_de_vendas.png);*/
+    background-color: cadetblue;
+    background-size: cover;
+    background-position: center;
+}
+
+.container {
+    width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;;
+    padding: 20px;
+}
+
+.container h1 {
+    font-size: 36px;
+    text-align: center;
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 16px;
+    border: 2px solid white;
+    border-radius: 40px;
+    padding-left: 10px;
+}
+
+.remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    margin: -15px 0px 15px; /*cima lados baixo*/
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.login {
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #333333;
+    font-weight: 600;
+}
+
+.login:hover {
+    background-color: transparent;
+    transition: 0.5s;
+    border: 2px solid white;
+}
+
+.register-link {
+    font-size: 14px;
+    text-align: center;
+    margin: 20px 0px 15px;
+
 }
