--- a/03.projetos/TelaDeLogin/style.css
+++ b/03.projetos/TelaDeLogin/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     border: border-box;
     font-family: "Elms Sans", sans-serif;
     color: rgb(203, 203, 203);
